--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -12,7 +12,7 @@
   padding: 3rem;
   border: 1px solid $color-white;
   font-size: 5rem;
-  width: 130%;
+  // width: 130%;
   grid-column: 2 / 3;
 }
 
